Speedup bolt server in tests
The netty logger factory was not properly overridden, so netty created its own log4j context which is quite costly. By setting the factory before creating the bolt server netty will now correctly use neo4j's log4j context.

The netty buffer allocation was statically initialized and consumed resources even if the bolt server was disabled.